--- a/assets/chip-vanilla.yml
+++ b/assets/chip-vanilla.yml
@@ -23,6 +23,11 @@ spec:
         version: v1
     spec:
 
+      # NodeS Selector direcionando para um NodePool Específico
+      nodeSelector:
+        karpenter.sh/nodepool: chip-capacity
+
+      # Topology Spread da zona de disponibilidade
       topologySpreadConstraints:
       - maxSkew: 1
         topologyKey: "topology.kubernetes.io/zone"
@@ -31,6 +36,7 @@ spec:
           matchLabels:
             app: chip
 
+      # Topology Spread do tipo de instância
       - maxSkew: 1
         topologyKey: "node.kubernetes.io/instance-type"
         whenUnsatisfiable: ScheduleAnyway
@@ -38,6 +44,7 @@ spec:
           matchLabels:
             app: chip
 
+      # Topology Spread do tipo de capacity-type
       - maxSkew: 1
         topologyKey: "karpenter.sh/capacity-type"
         whenUnsatisfiable: ScheduleAnyway
